<resources>
    <string name="app_name">Nmedia</string>
    <string name="nmedia">Nmedia!</string>
    <string name="likes" translatable="false">0</string>
    <string name="repost" translatable="false">3</string>
    <string name="views" translatable="false">500</string>
    <string name="published" translatable="false">21 мая в 18:36</string>
    <string name="author" translatable="false">Нетология. Университет интернет-профессий будущего</string>
    <string name="content" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="menu_remove" translatable="false">Remove</string>
    <string name="save">Save</string>
    <string name="empty" translatable="false">Поле не может быть пустым!</string>
    <string name="menu_edit" translatable="false">Edit</string>
    <string name="remove">Remove</string>
    <string name="description_share" translatable="false">Share</string>
</resources>